--- a/.github/workflows/test-ci.yml
+++ b/.github/workflows/test-ci.yml
@@ -10,6 +10,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - name: Set up Jdk 21
         uses: actions/setup-java@v3
         with:
