--- a/.github/workflows/test-ci.yml
+++ b/.github/workflows/test-ci.yml
@@ -29,10 +29,7 @@ jobs:
         uses : EnricoMi/publish-unit-test-result-action@v2
         if: always()
         with:
-          files: |
-            test-results/**./*.xml
-            test-results/**./*.trx
-            test-results/**./*.json
+          junit_files: '**/build/test-results/test/TEST-*.xml'
 
 
 
