--- a/.github/workflows/test-cd.yml
+++ b/.github/workflows/test-cd.yml
@@ -7,11 +7,35 @@ on:
 
 
 jobs:
-  deploy:
-    name: Deploy to Ec2
+  build:
+    name: Build Docker image and Push
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v4
+      - name: Set up Jdk 21
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
+      - name: Test with Gradle
+        run: ./gradlew -x test clean build
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name : Build and Push Docker Image
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/practice:latest .
+          docker push ${{ secrets.DOCKER_USERNAME }}/practice:latest
+  deploy:
       - name: executing remote ssh commands
         uses: appleboy/ssh-action@master
         with:
@@ -20,7 +44,6 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.PORT }}
           script: |
-            chmod +x ./test.sh
-            ./test.sh
-            echo "deploy finished"
+            docker pull ${{ secrets.DOCKER_USERNAME }}/practice:latest
+            echo "now finished" > finished.txt
          
