--- a/.github/workflows/test-cd.yml
+++ b/.github/workflows/test-cd.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Test with Gradle
+      - name: Build with Gradle
         run: ./gradlew -x test clean build
 
       - name: Login to DockerHub
