--- a/.github/workflows/test-cd.yml
+++ b/.github/workflows/test-cd.yml
@@ -3,7 +3,7 @@ name: Gongbaek CD
 on:
   workflow_run:
     workflows:
-      - Gongbaek CI  # CI 워크플로 이름
+      - ["Gongbaek CI"]  # CI 워크플로 이름
     types:
       - completed
 
@@ -12,36 +12,6 @@ on:
 
 
 jobs:
-  build:
-#    needs:
-#      - test
-#    name: Build Docker image and Push
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - uses: actions/checkout@v4
-#      - name: Set up Jdk 21
-#        uses: actions/setup-java@v3
-#        with:
-#          distribution: 'temurin'
-#          java-version: '21'
-#
-#      - name: Grant execute permission for gradlew
-#        run: chmod +x gradlew
-#
-#      - name: Build with Gradle
-#        run: ./gradlew -x test clean build
-#
-#      - name: Login to DockerHub
-#        uses: docker/login-action@v2
-#        with:
-#          username: ${{ secrets.DOCKER_USERNAME }}
-#          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-#
-#      - name : Build and Push Docker Image
-#        run: |
-#          docker build -t ${{ secrets.DOCKER_USERNAME }}/practice:latest .
-#          docker push ${{ secrets.DOCKER_USERNAME }}/practice:latest
   deploy:
     needs: build
     runs-on: ubuntu-latest
