--- a/.github/workflows/test-ci.yml
+++ b/.github/workflows/test-ci.yml
@@ -1,4 +1,4 @@
-name: Gongbaek CI
+name: TEST-REPORT CI
 
 
 on:
@@ -28,36 +28,3 @@ jobs:
         if: always()
         with:
           junit_files: '**/build/test-results/test/TEST-*.xml'
-
-  build:
-    needs:
-      - test
-    name: Build Docker image and Push
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Jdk 21
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '21'
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
-      - name: Build with Gradle
-        run: ./gradlew -x test clean build
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-      - name: Build and Push Docker Image
-        run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/practice:latest .
-          docker push ${{ secrets.DOCKER_USERNAME }}/practice:latest
-
-
