change ci cd fie

--- a/.github/workflows/test-cd.yml
+++ b/.github/workflows/test-cd.yml
@@ -5,7 +5,9 @@ on:
     workflows:
       - BUILD-CI  # CI 워크플로 이름
     types:
-      - completed
+      - success
+    branches:
+      - main
 
 
 jobs:
