--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -6,7 +6,9 @@ on:
     workflows:
       - TEST-REPORT CI  # CI 워크플로 이름
     types:
-      - completed
+      - success
+    branches:
+      - main
 
 
 jobs:
