--- a/.github/workflows/test-ci.yml
+++ b/.github/workflows/test-ci.yml
@@ -28,3 +28,7 @@ jobs:
         if: always()
         with:
           junit_files: '**/build/test-results/test/TEST-*.xml'
+
+      - name: Debug workflow event
+        run:
+            echo "Workflow run triggered for branch: ${{ github.ref }}"
