--- a/.github/workflows/test-ci.yml
+++ b/.github/workflows/test-ci.yml
@@ -30,5 +30,4 @@ jobs:
           junit_files: '**/build/test-results/test/TEST-*.xml'
 
       - name: Debug workflow event
-        run:
-            echo "Workflow run triggered for branchw: ${{ github.ref }}"
+        run: 'echo "Workflow run triggered for branchw: ${{ github.ref }}"'
