--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -2,6 +2,9 @@ name: BUILD CI
 
 
 on:
+  pull_request:
+    branches:
+      - main
   workflow_run:
     workflows:
       - TEST-REPORT CI  # CI 워크플로 이름
