--- a/.github/workflows/test-cd.yml
+++ b/.github/workflows/test-cd.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Debug workflow event
+        run: 'echo "Workflow run triggered for branch: ${{ github.ref }}"'
       - name: deploy appleboy
         uses: appleboy/ssh-action@master
         with:
