--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -2,11 +2,11 @@ name: BUILD CI
 
 
 on:
-  workflow_run:
-    workflows:
-      - ["TEST-REPORT CI"]  # CI 워크플로 이름
-    types:
-      - completed
+workflow_run:
+  workflows:
+     - [TEST-REPORT CI]  # CI 워크플로 이름
+  types:
+    - completed
 
 
 
