--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -2,14 +2,9 @@ name: BUILD CI
 
 
 on:
-workflow_run:
-  workflows:
-     - ["TEST-REPORT CI"]  # CI 워크플로 이름
-  types:
-    - completed
-  branches:
-    - test
-
+  workflow_run:
+    workflows: ["TEST-REPORT CI"]
+    types: [completed]
 
 
 jobs:
