--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -4,7 +4,7 @@ name: BUILD CI
 on:
   workflow_run:
     workflows: ["TEST-REPORT CI"]
-    types: [success]
+    types: [requested]
     branches: [test]
   workflow_dispatch:
 
