--- a/.github/workflows/test-cd.yml
+++ b/.github/workflows/test-cd.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: build-results
-          path: build/libs
+          run: ls -R
 
       - name: Login to DockerHub
         uses: docker/login-action@v2
