--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Download Build Artifacts
         uses: actions/download-artifact@v4
         with:
-          name: build-results  # CI에서 업로드한 아티팩트 이름과 동일
+          name: build-results  # CI에서 업로드한 아티팩트 이름과 동일qwer
 
 
 
